<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chaturaji</string>
    <string name="hello">Hello chaturaji-android-app!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_pass">Please enter your username and password:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="chaturaji">Chaturaji</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>

    <color name="main_colour">#2E2E2E</color>
    <color name="white">#FFFFFF</color>
    <color name="light_grey">#444444</color>
    <color name="grey">#222222</color>
    <color name="transparent">#00FFFFFF</color>
    <color name="light_brown">#FCDCB6</color>
    <color name="dark_brown">#B9663A</color>
    <color name="darkest_brown">#501C1C</color>
    <color name="gold">#FFCD34</color>
    <color name="light_blue">#80669CDE</color>

    <string name="pawn">pawn</string>
    <string name="boat">boat</string>
    <string name="knight">knight</string>
    <string name="elephant">elephant</string>
    <string name="king">king</string>
    <string name="empty">empty</string>

    <string name="movelist">Move List</string>

</resources>