<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/main_colour"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:weightSum="1"
                  android:background="@color/grey">

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_launcher"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/chaturaji"
                  android:textColor="@color/white"
                  android:textSize="40sp"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:layout_weight="1.01"/>

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_launcher"/>
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="300dp"
                  android:orientation="vertical"
                  android:layout_gravity="center"
                  android:gravity="center" android:weightSum="1">
        <Button
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                android:layout_marginBottom="10dp"
                style="@style/btnStyleArsenic"
                android:id="@+id/blue_button"/>


        <Button
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/red"
                android:id="@+id/red_button"
                style="@style/btnStyleArsenic"/>

        <Button
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/green"
                android:id="@+id/green_button"
                style="@style/btnStyleArsenic"/>

        <Button
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@string/yellow"
                android:id="@+id/yellow_button"
                style="@style/btnStyleArsenic"/>

    </LinearLayout>

</LinearLayout>