<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/main_colour"
        android:weightSum="1">

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:weightSum="1"
                  android:background="@color/grey">

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_launcher"
                   android:id="@+id/launcher_main"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/chaturaji"
                  android:textColor="@color/white"
                  android:textSize="40sp"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:layout_weight="1.01"
                  android:id="@+id/login_title"/>

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_launcher"/>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/user_pass"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:id="@+id/user_pass_text"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Email Address"
            android:ems="10"
            android:textColor="@color/white"
            android:id="@+id/email_login"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:textColor="@color/white"
            android:id="@+id/password_login"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="218dp"
                  android:orientation="vertical"
                  android:layout_gravity="center"
                  android:gravity="center" android:weightSum="1">
        <Button
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                style="@style/btnStyleArsenic"
                android:id="@+id/login_button"/>


        <Button
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/signup"
                android:id="@+id/signup_button"
                style="@style/btnStyleArsenic"/>

        <Button
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@string/update_password"
                android:id="@+id/update_button"
                style="@style/btnStyleArsenic"/>

    </LinearLayout>

</LinearLayout>